--- a/supervisorctl.conf
+++ b/supervisorctl.conf
@@ -1,3 +1,15 @@
+# SuperVisorD configurtion file
+# This is if you want to manage sources remotely to a server running kismet wireless
+# this is somewhat advanced and should be thought through for architecture of the systems
+# Always check the Kismet Wireless docs for the data sources and remote data sources details 
+# https://www.kismetwireless.net/docs/readme/datasources/datasources/
+# Each SDR requires its own ID or Serial Number - Check with your manufacturer of SDR for how to confirm and check and write unique Serial Numbers
+
+
+
+
+
+
 [program:kismetSDR915]
 command=/usr/bin/kismet_cap_sdr_rtl433 --tcp --connect 192.168.1.50:3501 --source=rtl433-073d38f6:name=SDR915,channel=915000000
 autostart=false
