--- a/kismet_site.conf
+++ b/kismet_site.conf
@@ -1,7 +1,15 @@
 # Kismet_site.conf file remains persistent between nightly upgrades
 # It is imperitve / required that custom and settings expected to sustain upgrades
 # be placed in this file so that upgrades can happen without having re-work the setings
+# 
+# Always check the Kismet Wireless docs for the data sources and remote data sources details 
+# https://www.kismetwireless.net/docs/readme/datasources/datasources/
+# Each SDR requires its own ID or Serial Number - Check with your manufacturer of SDR for how to confirm and check and write unique Serial Numbers
 
+#  Obviously you should not consider passwords in clear text configurations as secure. 
+# Here is how you force user/password
+httpd_username=busysignal
+httpd_password=busysignal
 
 # SDR Devices / sources that are you unique to your system go here
 # You should replace these with your own adapters connected to your system
